apps/platform/platform_k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toggle-master-ingress
  namespace: toggle-master

spec:
  ingressClassName: nginx

  rules:
    - host: auth.service

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: auth-service

                port:
                  number: 8001

    - host: flags.service

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: flag-service

                port:
                  number: 8002
    
    - host: targeting.service

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: targeting-service

                port:
                  number: 8003

    - host: evaluation.service

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: evaluation-service

                port:
                  number: 8004
    - host: analytics.service

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: analytics-service

                port:
                  number: 8005
